# flowly

./: .gitignore  MANIFEST.in  pyproject.toml
docs/: flowplay-export-format.md  index.md  plan.md  tasks.md  testing_conventions.md
examples/: demo.py  demo_ast.py  demo_ast_troubleshoot.py  demo_dsl.py  demo_markdown.py  demo_shared_nodes.py  demo_static.py  demo_svg.py  demo_tracer.py
flowly/: __init__.py  cli.py
flowly/backend/: __init__.py  graphviz.py  html.py  mermaid.py  svg.py
flowly/core/: __init__.py  ir.py  serialization.py
flowly/engine/: __init__.py  runner.py
flowly/frontend/: __init__.py  ast_builder.py  builder.py  dsl.py  static.py  tracer.py
flowplay/: app.js  app.js.bak  complex_flow.json  improvements.md  index.html  review.md  styles.css
tests/: complex_flow.py  conftest.py  test_backend_graphviz.py  test_backend_html.py  test_backend_mermaid.py  test_backend_multiflow.py  test_backend_svg.py  test_circular_subflows.py  test_cli.py  test_complex_flow.py  test_core_ir.py  test_engine.py  test_frontend.py  test_frontend_ast.py  test_frontend_dsl.py  test_frontend_static.py  test_frontend_tracer.py  test_serialization.py  test_zz_e2e.py
